force-app/main/default/objects/nFUSE__Credit_Report__c/nFUSE__Credit_Report__c.object-meta.xml
<CustomObject>
    <description>Credit report pull information</description>
    <label>Credit Report</label>
    <nameField>
        <label>Credit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>