force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Address_Discrepency__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Address_Discrepency__c</fullName>
    <description>This field populates with alternate address information from the credit bureau if an address discrepancy is found.</description>
    <label>Address Discrepancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>