force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Alert_Code__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Alert_Code__c</fullName>
    <description>This field contains an alert code assigned by the credit bureau; see credit bureau documentation for a description of the code.</description>
    <label>Alert Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>