force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Alert_Message__c</fullName>
    <description>This field contains an alert message from the credit bureau.</description>
    <label>Alert Message</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>