force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Average_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Average_Open_Balance__c</fullName>
    <description>Contains the average open dollar balance for this entity.</description>
    <label>Average Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>