force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Business_Delinquency_Financial_Score__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Business_Delinquency_Financial_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Business delinquency financial score</description>
    <label>Business Delinquency Financial Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>