force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Charge_Off__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Charge_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional checkbox to indicate any charge off activity. By default, this field is deselected.</description>
    <inlineHelpText>This field signifies if a record contains charge off activity.</inlineHelpText>
    <label>Charge-off</label>
    <type>Checkbox</type>
</CustomField>