force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Contact__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact associated with the credit report.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Credit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>