force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Credit_Active_Since__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Credit_Active_Since__c</fullName>
    <description>The date that the credit became active is optionally stored in thie field.</description>
    <label>Credit Active Since</label>
    <type>Date</type>
</CustomField>