force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Credit_Score__c</fullName>
    <description>This field contains the credit score reported by the credit bureau for this entity.</description>
    <label>Credit Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>