force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__EFX_ID__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__EFX_ID__c</fullName>
    <description>This field contains a unique identifier assigned by the credit bureau to the credit report.</description>
    <label>EFX ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>