force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Fraud_Alert__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Fraud_Alert__c</fullName>
    <description>This field contains details regarding any identification or fraud issues found.</description>
    <label>ID Verification/Fraud Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>