force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Industry_Payment_Index__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Industry_Payment_Index__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Industry payment index</description>
    <label>Industry Payment Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>