force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Last_Run_Date__c</fullName>
    <description>This field contains the most recent previous credit report run date.</description>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>