force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Liens_Amount_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Liens_Amount_Satisfied__c</fullName>
    <description>Dollar amount of liens satisfied on account.</description>
    <label>Dollar amount of Liens Satisfied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>