force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Match_Quality_Indicator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Match_Quality_Indicator__c</fullName>
    <description>Match quality indicator</description>
    <label>Match Quality Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>