force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Most_Severe_Status_24Months__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Most_Severe_Status_24Months__c</fullName>
    <description>The most severe credit status in the past 24 months for this entity.</description>
    <label>MostSevereStatus24Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>