force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Number_Of_Bankruptcies__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Number_Of_Bankruptcies__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contains the total number of bankruptcies for this entity.</description>
    <label>Number of Bankruptcies</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>