force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Number_Of_Charge_Offs__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Number_Of_Charge_Offs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contains the number of charge offs across all credit lines for this entity.</description>
    <label>Number of Charge Offs</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>