force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Number_Of_Judgements__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Number_Of_Judgements__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If the number of judgements is known, this field will contain the number of judgements against the entity.</description>
    <label>Number of Judgements</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>