force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__OFAC_Alert_Indicator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__OFAC_Alert_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A positive value in this field indicates the known presence of an OFAC match for the provided Relationship</description>
    <label>OFAC Alert</label>
    <type>Checkbox</type>
</CustomField>