force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Open_Tradelines__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Open_Tradelines__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The system automatically populates this number field to count the number of open tradelines. By default, this field is 0.</description>
    <inlineHelpText>This field displays the total number of open tradelines.</inlineHelpText>
    <label>Open Tradelines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>