force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Report_Category__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Report_Category__c</fullName>
    <description>This field identifies the credit report category of the credit report.</description>
    <label>Report Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>