force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Repossession__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Repossession__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional checkbox field to indicate if the record contains information that concerns repossession on a tradeline. By default, this field is deselected.</description>
    <inlineHelpText>This field signifies if a record contains an indication of repossession on a tradeline.</inlineHelpText>
    <label>Repossession</label>
    <type>Checkbox</type>
</CustomField>