force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Total_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Total_Credit_Limit__c</fullName>
    <description>This field contains the total credit limit across all current credit lines owned by this entity.</description>
    <label>Total Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>