force-app/main/default/objects/nFUSE__Credit_Report__c/fields/SCOC__CreditBureauResponse__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditBureauResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to credit bureau response.</description>
    <label>Credit Bureau Response</label>
    <referenceTo>SCOC__CreditBureauResponse__c</referenceTo>
    <relationshipLabel>Credit Reports</relationshipLabel>
    <relationshipName>Credit_Report</relationshipName>
    <type>Lookup</type>
</CustomField>