force-app/main/default/objects/nFUSE__Credit_Report__c/fields/SCOC__External_Id__c.field-meta.xml
<CustomField>
    <fullName>SCOC__External_Id__c</fullName>
    <description>The system automatically populates this optional text field to facilitate asynchronous dml updates. By default, it is blank.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>